[project]
name = "cursour-analytics-portal"
version = "0.1.0"
description = "Python SDK for Cursor Admin API to fetch usage data"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.9.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "pydantic>=2.0.0",
    "python-dateutil>=2.8.0",
    "python-dotenv>=1.0.0",
    "requests>=2.32.4",
]

[tool.setuptools.packages.find]
include = ["cursor_admin_sdk*"]
exclude = ["scratchpads*", "tests*"]
